--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<h1>Welcome to the best site on the Internet. Check back later for updates.</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <style>
+    body, html {
+      height: 100%;
+      margin: 0;
+    }
+    .centered-DIIIV {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      height: 100%;
+    }
+  </style>
+</head>
+<body>
+  <div class="centered-DIIIV">
+    <div>
+      <h1>Welcome to the best site on the Internet. Check back later for updates.</h1>
+    </div>
+  </div>
+</body>
+</html>
